# BookAlgorithm

./: BookAlgorithm.cabal  CHANGELOG.md  LICENSE  README.md  book-recommendation.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.4.8/: BookAlgorithm-0.1.0.0-inplace.conf  package.cache
src/: Book.hs  Main.hs  Recommendation.hs  Test.hs  Tests.hs  User.hs
test/: Test.hs
