name:                book-recommendation
version:             0.1.0.0
license:             MIT
build-type:          Simple
cabal-version:       >=1.10

executable book-recommendation
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >=4.14 && <4.15